Changed a field, added filtering logic and tests
